# CMakeProjectTemplate

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  INSTALL  ProjectConfig.cmake  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
benchmark/: CMakeLists.txt
benchmark/infrastructure/: CMakeLists.txt  infrastructure_benchmark.cpp
cmake/: Benchmarking.cmake  Boost.cmake  BuildInfo.cmake  CompilerLinker.cmake  Coverage.cmake  CppCheck.cmake  Doxygen.cmake  EnableIPOSupport.cmake  Format.cmake  GetFTXUI.cmake  Install.cmake  Memcheck.cmake  NoInSourceBuilds.cmake  OneTBB.cmake  Precompiling.cmake  Testing.cmake  buildinfo.h.in
src/: CMakeLists.txt
src/infrastructure/: CMakeLists.txt  infrastructure.cpp
test/: CMakeLists.txt
test/infrastructure/: CMakeLists.txt  infrastructure_test.cpp
